--- a/src/login/login.css
+++ b/src/login/login.css
@@ -1,13 +1,33 @@
-.loginWrap{
-    background-image: url('../assets/img/bg.jpg');
-    background-repeat: no-repeat;
-    background-size:cover;
+/*  @import "~antd/lib/style/themes/default.less"; */
+
+.login-page {
+  background: url("../assets/img/bg.jpg") repeat;
+  height:100vh;
 }
-#basic{
-    padding:30px 30px 5px;
-    box-shadow: 0px 0px 5px 0px #fff;
-    transition: linear .5s;
+.login-form {
+  width: 368px;
+  margin: 0 auto;
 }
-#basic:hover{
-    box-shadow: 0px 0px 20px 5px #fff;
+.login-form-forgot {
+  float: right;
+}
+.login-form-button {
+  width: 100%;
+  margin: 12px 0;
+}
+.new-user {
+  float: right;
+}
+.user-img {
+  margin: 110px 0 26px 0;
+  font-size: 28px;
+  text-align: center;
+}
+.user-img img {
+  width: 50px;
+  margin-right: 18px;
+}
+
+.ant-spin-nested-loading > div > .ant-spin {
+  max-height: none;
 }
